# ArnLifeBank_paper

./: .gitignore  CLAUDE.md  README.md  armlibenank.sh  claude-resume  config.yaml  log.md  pubmed_armenia_stats.py  pyproject.toml  pytest.ini  repository_patterns.yaml  requirements.txt
analysis/: alb_stats.py  combine_results.py  fragmentation.py  fragmentation_armlifebank.py  harvest.py  lha_report.py  match.py  normalize.py  reuse.py  search_findability.py
armlifebank/: __init__.py  affiliation.py  cache.py  cli.py  config.py  fulltext.py  pubmed.py  reporting.py  repositories.py
config/: arm.yaml  lha.yaml
country_profiles/: armenia.yaml  estonia.yaml  georgia.yaml  latvia.yaml  leipzig_university.yaml
next_steps/: armlifebank_lha_discoverability_instructions.md  fragmentation_analysis.md  fragmentation_followup.txt  results_draft.md  reuse.md  search_findability_findings.md
prompts/: prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md
tests/: test_affiliation.py  test_integration.py  test_lha_normalize.py  test_repositories.py
tests/fixtures/: fixture_pmids.json
